v3.8.2 (XXXX-XX-XX)
-------------------

* Fix windows installer PATH manipulation issue by replaceng the NSIS plugin
  (BTS-176).

* Fix race in RocksDB throttle listener, when it was getting started lazily
  during server shutdown.

* Fixed potential issues with revision trees and document counters getting out
  of sync with the underlying collection data.

* Fixed BTS-582: ArangoDB client EXE package for Windows has incorrect metadata.

* Fixed BTS-575: Windows EXE installer doesn't replace service during upgrade in
  silent (non-UI) mode.

* Fix issue #14819: Query: AQL: missing variable # for node #... location
  RestCursorHandler.cpp.

* Fix issue #14807: Fix crash during optimization of certain AQL queries during
  the remove-collect-variables optimizer rule, when a COLLECT node without
  output variables (this includes RETURN DISTINCT) occured in the plan.

* Prevent some possible deadlocks under high load regarding transactions and
  document operations, and also improve performance slightly.

* Fixed a bug for array indexes on update of documents (BTS-548).

* Fixed BTS-562: reduce-extraction-to-projection optimization returns null for
  one attribute if nested attributes are named the same.

* Prevent stealing of values from AQL const value registers. This fixes an issue
  for queries that produce constant results (known at query compile time) when
  the queries are executed directly on a DB server in a cluster (which is not
  supported, but may happen for troubleshooting).

* Avoid the acquisition of a recursive read lock on server shutdown, which
  could in theory lead to shutdown hangs at least if a concurrent thread is
  trying to modify the list of collections (very unlikely and never observed
  until now).

* Fix active failover, so that the new host actually has working foxx services
  (BTS-558).

* Fixed issue #14720: Bulk import ignores onDuplicate in 3.8.0.
  The "onDuplicate" attribute was ignored by the `/_api/import` REST API when