@@ -41,12 +41,13 @@ struct TransactionStatistics {
   void setupDocumentMetrics();
 
   arangodb::MetricsFeature& _metrics;
-  
+
   Counter& _transactionsStarted;
   Counter& _transactionsAborted;
   Counter& _transactionsCommitted;
   Counter& _intermediateCommits;
-  
+  Counter& _readTransactions;
+
   // total number of lock timeouts for exclusive locks
   Counter& _exclusiveLockTimeouts;
   // total number of lock timeouts for write locks
@@ -57,7 +58,7 @@ struct TransactionStatistics {
   Histogram<log_scale_t<double>>& _lockTimes;
   // Total number of times we used a fallback to sequential locking
   Counter& _sequentialLocks;
-  
+
   // Total number of write operations in storage engine (excl. sync replication)
   std::optional<std::reference_wrapper<Counter>> _numWrites;
   // Total number of write operations in storage engine by sync replication
@@ -67,7 +68,7 @@ struct TransactionStatistics {
   // Total number of truncate operations (not number of documents truncated!) by sync replication
   std::optional<std::reference_wrapper<Counter>> _numTruncatesReplication;
 
-  /// @brief the following metrics are conditional and only initialized if 
+  /// @brief the following metrics are conditional and only initialized if
   /// startup option `--server.export-read-write-metrics` is set
   std::optional<std::reference_wrapper<Histogram<log_scale_t<float>>>> _rocksdb_read_sec;
   std::optional<std::reference_wrapper<Histogram<log_scale_t<float>>>> _rocksdb_insert_sec;
@@ -77,7 +78,7 @@ struct TransactionStatistics {
   std::optional<std::reference_wrapper<Histogram<log_scale_t<float>>>> _rocksdb_truncate_sec;
 
   bool _exportReadWriteMetrics;
-  
+
 };
 
 struct ServerStatistics {
@@ -92,7 +93,7 @@ struct ServerStatistics {
 
   TransactionStatistics _transactionsStatistics;
   double const _startTime;
-  
+
   double uptime() const noexcept;
 
   explicit ServerStatistics(arangodb::MetricsFeature& metrics, double start)
