@@ -1,6 +1,9 @@
 v3.8.2 (XXXX-XX-XX)
 -------------------
 
+* Fixed counting of all read transaction as aborted. Added a new metric to count
+  read transactions.
+
 * Fix windows installer PATH manipulation issue by replaceng the NSIS plugin
   (BTS-176).
 
